# m32logievo

./: .gitignore  ControlUnit.circ  DBI.circ  M32.circ  Makefile  RAM.circ  README.md  Wait3.circ  microensamblador.py  microprograma.s  package.txt  primera_presentacion  primera_presentacion.MD  prompt_presentacion_2  release.py  run.bat  run.sh  segunda_presentacion  segunda_presentacion.MD  tercera_presentacion.md  todo
.github/workflows/: build.yaml
docs/: cuarta_presentacion.md  dbi.txt  posibles_preguntas.md  presentacion1.md  presentacion5.md  presentacion6.md  presentacion7.md  presentacion8.md  presentacion9.md
examples/: M32 LDWx2.circ
examples/LDWx2/: M32 LDWx2.circ  ensamblador.py  microensamblador.py  microprograma.s
plugins/: build.xml
plugins/src/m32plugin/: ALUWire.java  ArrowWire.java  AuxWire.java  ComponentName.java  ControlUnitCycle.java  ControlUnitCycleMain.java  DefinedOutputSplitter32.java  M32Library.java  Makefile  PCWire.java  (+6 more)
src/: ensamblador.py  microensamblador.py  microprograma.s  programa.s
src/m32plugin/: ArrowWire.java  ArrowWire32bits.java  ArrowWire5bits.java  ColoredWireMonitor.java  ComponentName.java  DefinedOutputSplitter32.java  M32Library.java  Makefile  PCWire.java  QuadByteRam.java  RBankWire.java  TunnelValueFetcher.java
tools/: ensamblador.py  microprograma.s  printf.s  programa_inicial.s  pyproject.toml
tools/programas/: microprograma.s  teclado.s
tools/src/ensamblador/: ensamblador.py
tools/src/microensamblador/: microensamblador.py
tools/tests/: test_ensamblador.py  test_microensamblador.py
(+5 files in other folders)
